# scuc23

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_colab.txt
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/base/parameters/: 00_data_preprocessing.yml  01_classify_price.yml  02_regression_for_under_threshold.yml  03_regression_for_over_threshold.yml  04_post_process.yml  data_science.yml  publish_artifacts.yml
docs/source/: conf.py  index.rst
notebooks/: clustering.ipynb  optuna-tuning.ipynb  optuna.ipynb
scripts/: seed_ensemble.py
src/: setup.py
src/scuc23/: __init__.py  __main__.py  settings.py
src/scuc23/modules/: __init__.py  cv_stratifiedkfold.py  data_util.py  lgbm_util.py  xgb_util.py
src/scuc23/pipelines/00_data_preprocessing/: README.md  __init__.py  nodes.py  pipeline.py
src/scuc23/pipelines/01_classify_price/: README.md  __init__.py  nodes.py  pipeline.py
src/scuc23/pipelines/02_regression_for_under_threshold/: README.md  __init__.py  nodes.py  pipeline.py
src/scuc23/pipelines/03_regression_for_over_threshold/: README.md  __init__.py  nodes.py  pipeline.py
src/scuc23/pipelines/04_post_process/: README.md  __init__.py  nodes.py  pipeline.py
src/scuc23/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/scuc23/pipelines/data_science/: nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/00_data_preprocessing/: test_pipeline.py
src/tests/pipelines/01_classify_price/: test_pipeline.py
src/tests/pipelines/02_regression_for_under_threshold/: test_pipeline.py
(+2 files in other folders)
